# lora-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  index.html  lora.grc
.github/workflows/: pages.yml
rx/: 04-hamming_dec.cpp  04-hamming_dec.h  06-gray_mapping.cpp  06-gray_mapping.h
src/: channel.rs  lib.rs  modem.rs  tables.rs  uhd.rs
src/rx/: crc_verif.rs  deinterleaver.rs  dewhitening.rs  fft_demod.rs  frame_sync.rs  gray_mapping.rs  hamming_dec.rs  header_decoder.rs  mod.rs
src/tx/: crc.rs  gray_demap.rs  hamming_enc.rs  header.rs  interleaver.rs  mod.rs  modulate.rs  whitening.rs
src/ui/: analyzer.rs  chart.rs  mod.rs  plottable.rs  spectrum_plot.rs  waterfall_plot.rs
tests/: 01-whitening.cpp  02-header.cpp  03-crc.cpp  05-interleaver.cpp  06-gray.cpp  hamming.cpp
tx/: 04-hamming_enc.cpp  04-hamming_enc.h  06-gray_demap.cpp  06-gray_demap.h
